--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img class="cabecalho-imagem" src="black_7.jpg" alt="Logo do Black">
     <nav class="cabecalho-menu">
       <a class="cabecalho-menu-item" href="#">Sobre a Agrovit</a>
-      <a class="cabecalho-menu-item" href="#">Raçoes</a>
+      <a class="cabecalho-menu-item" href="#">Rações</a>
       <a class="cabecalho-menu-item" href="#">Medicamentos</a>
       <a class="cabecalho-menu-item" href="#">Brinquedos</a>
     </nav>
